@@ -9,6 +9,14 @@ TODO
 
       o Rvmmin with no bounds gives warning when called with no gradient. 130411
 
+VERSION 2013-04-30
+
+      o added optimx<-.coef
+
+VERSION 2013-04-29
+
+      o removed help pages documenting obsolete features
+
 VERSION 2013-04-06
 
       o nmkb and hjkb had no ... arguments in call. Fixed.
